Version 2.0.1, to be released

Added support for enums in generated tests.  If enum doesn't define any methods,
then it will only be used as an argument to methods of other classes. Otherwise,
an enum is treated similarly to any other class.  Will extract all enum constants,
and extracts both public methods explicitly declared in the class (but not 
values() or valueOf(-)), inherited methods that are also defined in anonymous 
class for at least one constant. Captures abstract methods of enum, since must be 
implemented for all constants. 

Finished consolidation of web documentation, moved Wiki project ideas into doc folder.

Moved plugin directories into their own repository.

Version 2.0, released October 13, 2015

The Randoop homepage is now http://randoop.github.io/randoop/ .
Moved the Randoop version control repository to its own GitHub organization:
it now appears at https://github.com/randoop/randoop
(previously https://github.com/mernst/randoop).

Randoop now outputs JUnit 4 tests (previously JUnit 3 tests).
These can be run from the command line using a command such as

  java -classpath .:$JUNITPATH org.junit.runner.JUnitCore RandoopTest

If command-line argument --junit-reflection-allowed=false is set when
running Randoop, then Randoop instead produces a Main class that calls each
of the test methods individually, without using reflection.

Created a new mailing list, randoop-discuss@googlegroups.com, for
discussions with Randoop users.  It is open to join and should be easier to
search than the existing randoop-developers@googlegroups.com mailing list.


Version 1.3.6, released August 10, 2015

Command-line-argument --junit-reflection-allowed=false causes Randoop to
avoid use of JUnit's reflective test invocation.  Use of direct method
calls instead can make Randoop's generated tests easier to analyze.

Changed default for --literals-level to CLASS.

Improvements in treatment of observer methods:  put observer results in the