@@ -1,6 +1,9 @@
 
+import org.junit.FixMethodOrder;
 import org.junit.Test;
+import org.junit.runners.MethodSorters;
 
+@FixMethodOrder(MethodSorters.NAME_ASCENDING)
 public class LongString0 {
 
   public static boolean debug = false;
