@@ -1,7 +1,10 @@
 package foo.bar;
 
+import org.junit.FixMethodOrder;
 import org.junit.Test;
+import org.junit.runners.MethodSorters;
 
+@FixMethodOrder(MethodSorters.NAME_ASCENDING)
 public class TestClass0 {
 
   public static boolean debug = false;
